--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
   font-family: "Open Sans", sans-serif;
   min-height: 100vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)),
-    url("file:///C:/Users/Student/Downloads/html/Untitled%20design.jpg");
+    url("https://wallpaperaccess.com/full/1131198.jpg");
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
